# WeConnect-python

./: pyproject.toml
examples/: allVehicles.py  climatization.py  events.py  savePictures.py
tests/: test_addressable.py  test_elements.py
vw-carnet/: weconnect.py
vw-carnet/auth/: my_cupra_session.py  openid_session.py  vw_web_session.py  we_connect_session.py
vw-carnet/elements/: auxiliaryheating_timer.py  capability_status.py  charge_mode.py  charging_settings.py  charging_station.py  climatization_settings.py  climatization_timer.py  controls.py  departure_timers_status.py  enums.py  generic_settings.py  generic_status.py  lights_status.py  range_status.py  readiness_status.py  temperature_battery_status.py  temperature_outside_status.py  vehicle.py  window_heating_status.py
vw-carnet/elements/helpers/: request_tracker.py
vw_carnet/: addressable.py  config.py
vw_carnet/auth/: my_cupra_session.py  session_manager.py  we_charge_session.py  we_connect_session.py
vw_carnet/elements/: access_status.py  activeventilation_timer.py  auxiliaryheating_status.py  battery_status.py  battery_support_status.py  charging_care_settings.py  charging_profiles.py  charging_status.py  climatization_status.py  error.py  fuel_level_status.py  general_controls.py  generic_capability.py  generic_request_status.py  lv_battery_status.py  maintenance_status.py  odometer_measurement.py  parking_position.py  plug_status.py  range_measurements.py  timer.py  trip.py  warning_lights_status.py
