[tool.poetry]
name = "vw-carnet"
version = "0.1.0"
description = ""
authors = ["Dave Rench McCauley <11720378+emigre459@users.noreply.github.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
oauthlib = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
